[package]
name = "issen-mft-tree"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "Shared MFT file tree for Issen"
repository.workspace = true

[dependencies]
chrono = { workspace = true }
anyhow = { workspace = true }
indicatif = { workspace = true }
mft = { workspace = true }
ntfs-core = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
