[package]
name = "issen-parsers"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "Aggregator umbrella: force-links every issen-parser-* crate so their inventory registrations survive dead-code elimination. Not itself a parser."
repository.workspace = true
publish = false

[lib]
name = "issen_parsers"
path = "src/lib.rs"

# Every issen-parser-* crate whose `inventory::submit!` must survive DCE is a
# DIRECT normal dependency here — this list is the single source of truth for
# the parser anchor set. `build.rs` reads THIS manifest and emits one real
# `extern crate <dep> as _;` per dep into OUT_DIR/anchors.rs. Add a parser =>
# add one line here; the build regenerates the anchor.
[dependencies]
issen-parser-amcache = { workspace = true }
issen-parser-comhijack = { workspace = true }
issen-parser-dcc2 = { workspace = true }
issen-parser-evtx = { workspace = true }
issen-parser-linux = { workspace = true }
issen-parser-lnk = { workspace = true }
issen-parser-logfile = { workspace = true }
issen-parser-lsasecrets = { workspace = true }
issen-parser-lxss = { workspace = true }
issen-parser-macos = { workspace = true }
issen-parser-mft = { workspace = true }
issen-parser-pe = { workspace = true }
issen-parser-prefetch = { workspace = true }
issen-parser-regcatalog = { workspace = true }
issen-parser-registry = { workspace = true }
issen-parser-runkeys = { workspace = true }
issen-parser-sam = { workspace = true }
issen-parser-setupapi = { workspace = true }
issen-parser-shellbags = { workspace = true }
issen-parser-shimcache = { workspace = true }
issen-parser-srum = { workspace = true }
issen-parser-svcdiff = { workspace = true }
issen-parser-trash = { workspace = true }
issen-parser-typedurls = { workspace = true }
issen-parser-uac = { workspace = true }
issen-parser-userassist = { workspace = true }
issen-parser-usnjrnl = { workspace = true }
issen-parser-velociraptor = { workspace = true }

[build-dependencies]
toml = { workspace = true }

[dev-dependencies]
toml = { workspace = true }

[lints]
workspace = true
