[package]
name = "issen-qcow2"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "QCOW2 disk image reader for the Issen forensic pipeline"
repository.workspace = true

[lib]
name = "issen_qcow2"
path = "src/lib.rs"

[dependencies]
issen-core = { workspace = true }
qcow2      = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
qcow2    = { workspace = true, features = ["test-helpers"] }

[lints]
workspace = true
