[package]
name = "issen-qcow2"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "QCOW2 disk image reader for the Issen forensic pipeline"
repository.workspace = true

[lib]
name = "issen_qcow2"
path = "src/lib.rs"

[dependencies]
issen-core   = { workspace = true }
issen-unpack = { workspace = true }
inventory    = { workspace = true }
qcow2        = { workspace = true }
thiserror    = { workspace = true }
tempfile     = { workspace = true }

[dev-dependencies]
qcow2 = { workspace = true, features = ["test-helpers"] }
zip   = { workspace = true }

[lints]
workspace = true
