[package]
name = "issen-signatures"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "Signature scanning and threat intel matching for Issen"
repository.workspace = true

[features]
default = ["heuristics"]
heuristics = ["dep:issen-mft-tree", "dep:ntfs-core"]

[dependencies]
issen-core = { workspace = true }
issen-correlation = { workspace = true }
forensicnomicon = { workspace = true }

# Heuristics (optional)
issen-mft-tree = { workspace = true, optional = true }
ntfs-core = { workspace = true, optional = true }

# Scanning engines
yara-x = { workspace = true }
tau-engine = { workspace = true }

# Serialization & parsing
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
csv = { workspace = true }

# Network IOC matching
ipnet = { workspace = true }
regex = { workspace = true }

# Hashing
sha2 = { workspace = true }
hex = { workspace = true }
md-5 = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Utilities
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true }

[lints]
workspace = true
