[package]
name = "issen-unpack"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "Collection format detection and extraction for Issen"
repository.workspace = true

[dependencies]
issen-core = { workspace = true }
chrono = { workspace = true }
inventory = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# Safe statfs(2)/statvfs(3) for runtime tmpfs detection + temp free space of the
# spill dir (already in the tree via tempfile; no unsafe/libc in our code).
rustix = { version = "0.38", features = ["fs"] }
# Cross-platform available-RAM probe for the adaptive spill budget.
sysinfo = "0.33"
# Read a disk-image entry straight out of an archive (zip first; 7z/tar/dar next).
zip = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
inventory = { workspace = true }
issen-core = { workspace = true }

[lints]
workspace = true
