[package]
name = "issen-vhd"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "Legacy VHD disk image reader for the Issen forensic pipeline"
repository.workspace = true

[lib]
name = "issen_vhd"
path = "src/lib.rs"

[dependencies]
issen-core = { workspace = true }
vhd        = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
vhd      = { workspace = true, features = ["test-helpers"] }

[lints]
workspace = true
